Ready for video testing

--- a/app/src/main/res/layout/activity_current_size.xml
+++ b/app/src/main/res/layout/activity_current_size.xml
@@ -13,8 +13,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignBottom="@+id/sizeDate"
         android:gravity="center_vertical"
-        android:textSize="18dp"
-        android:layout_alignEnd="@+id/viewNeck" />
+        android:textSize="16dp"
+        android:layout_alignEnd="@+id/viewNeck"
+        android:translationX="5dp" />
 
     <TextView
         android:text="Neck:"
@@ -24,9 +25,10 @@
         android:layout_below="@+id/viewDate"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/sizeBust"
-        android:textSize="18dp"
+        android:textSize="16dp"
         android:layout_alignEnd="@+id/viewBust"
-        android:gravity="center_vertical" />
+        android:gravity="center_vertical"
+        android:translationX="5dp" />
 
     <TextView
         android:text="Bust:"
@@ -36,9 +38,10 @@
         android:layout_below="@+id/viewNeck"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/sizeChest"
-        android:textSize="18dp"
+        android:textSize="16dp"
         android:layout_alignEnd="@+id/viewChest"
-        android:gravity="center_vertical" />
+        android:gravity="center_vertical"
+        android:translationX="5dp" />
 
     <TextView
         android:text="Chest:"
@@ -48,9 +51,10 @@
         android:layout_below="@+id/viewBust"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/sizeWaist"
-        android:textSize="18dp"
+        android:textSize="16dp"
         android:layout_alignEnd="@+id/viewWaist"
-        android:gravity="center_vertical" />
+        android:gravity="center_vertical"
+        android:translationX="5dp" />
 
     <TextView
         android:text="Waist:"
@@ -60,9 +64,10 @@
         android:layout_below="@+id/viewChest"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/sizeHip"
-        android:textSize="18dp"
+        android:textSize="16dp"
         android:layout_toStartOf="@+id/sizeHip"
-        android:gravity="center_vertical" />
+        android:gravity="center_vertical"
+        android:translationX="5dp" />
 
     <TextView
         android:text="Hip:"
@@ -72,9 +77,10 @@
         android:layout_below="@+id/viewWaist"
         android:layout_alignParentStart="true"
         android:layout_alignBottom="@+id/sizeHip"
-        android:textSize="18dp"
+        android:textSize="16dp"
         android:layout_alignEnd="@+id/viewInseam"
-        android:gravity="center_vertical" />
+        android:gravity="center_vertical"
+        android:translationX="5dp" />
 
     <TextView
         android:text="Name:"
@@ -83,22 +89,24 @@
         android:id="@+id/viewName"
         android:layout_alignParentTop="true"
         android:layout_alignBottom="@+id/sizeName"
-        android:textSize="18dp"
+        android:textSize="16dp"
         android:layout_alignEnd="@+id/viewDate"
         android:layout_alignParentStart="true"
-        android:gravity="center_vertical" />
+        android:gravity="center_vertical"
+        android:translationX="5dp" />
 
     <TextView
         android:text="Inseam:"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/viewInseam"
-        android:textSize="18dp"
+        android:textSize="16dp"
         android:layout_below="@+id/viewHip"
         android:layout_alignParentStart="true"
         android:layout_alignBottom="@+id/sizeInseam"
         android:layout_toStartOf="@+id/sizeInseam"
-        android:gravity="center_vertical" />
+        android:gravity="center_vertical"
+        android:translationX="5dp" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -110,6 +118,7 @@
         android:layout_marginLeft="0dp"
         android:hint="in inches"
         android:layout_below="@+id/sizeHip"
+        android:textSize="16dp"
         android:layout_centerHorizontal="true" />
 
     <EditText
@@ -120,6 +129,7 @@
         android:id="@+id/sizeHip"
         android:hint="in inches"
         android:layout_below="@+id/sizeWaist"
+        android:textSize="16dp"
         android:layout_toEndOf="@+id/viewHip" />
 
     <EditText
@@ -132,7 +142,7 @@
         tools:layout_alignParentEnd="false"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/viewName"
-        android:textSize="18dp"
+        android:textSize="16dp"
         android:gravity="bottom" />
 
     <EditText
@@ -143,6 +153,7 @@
         android:id="@+id/sizeDate"
         android:hint="yyyy-mm-dd format"
         android:layout_below="@+id/viewName"
+        android:textSize="16dp"
         android:layout_toEndOf="@+id/viewDate" />
 
     <EditText
@@ -155,6 +166,7 @@
         android:layout_marginLeft="0dp"
         android:hint="in inches"
         android:layout_below="@+id/viewDate"
+        android:textSize="16dp"
         android:layout_toEndOf="@+id/viewNeck" />
 
     <EditText
@@ -165,6 +177,7 @@
         android:id="@+id/sizeBust"
         android:hint="in inches"
         android:layout_below="@+id/sizeNeck"
+        android:textSize="16dp"
         android:layout_toEndOf="@+id/viewNeck" />
 
     <EditText
@@ -175,6 +188,7 @@
         android:id="@+id/sizeChest"
         android:hint="in inches"
         android:layout_below="@+id/sizeBust"
+        android:textSize="16dp"
         android:layout_toEndOf="@+id/viewBust" />
 
     <EditText
@@ -185,17 +199,8 @@
         android:id="@+id/sizeWaist"
         android:hint="in inches"
         android:layout_below="@+id/sizeChest"
+        android:textSize="16dp"
         android:layout_toEndOf="@+id/viewChest" />
-
-    <Button
-        android:text="Save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="17dp"
-        android:id="@+id/saveButton"
-        android:layout_below="@+id/sizeComment"
-        android:layout_toEndOf="@+id/viewComment"
-        android:layout_marginStart="27dp" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -206,6 +211,7 @@
         android:hint="comment here"
         android:gravity="top"
         android:layout_below="@+id/viewInseam"
+        android:textSize="16dp"
         android:layout_toEndOf="@+id/viewInseam" />
 
     <TextView
@@ -213,11 +219,22 @@
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:id="@+id/viewComment"
-        android:textSize="18dp"
+        android:textSize="16dp"
         android:gravity="bottom"
         android:layout_alignBaseline="@+id/sizeComment"
         android:layout_alignBottom="@+id/sizeComment"
         android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/sizeComment" />
+        android:layout_toStartOf="@+id/sizeComment"
+        android:translationX="5dp" />
+
+    <Button
+        android:text="Save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/saveButton"
+        android:layout_below="@+id/sizeComment"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="27dp"
+        android:textSize="16dp" />
 
 </RelativeLayout>
